[ENG-2948] Fix thankyou icon overlap (#346)

--- a/src/components/common/Success.scss
+++ b/src/components/common/Success.scss
@@ -98,6 +98,10 @@
         animation: animate-success-long 0.75s;
       }
     }
+
+    @include phone() {
+      margin-bottom: 24px;
+    }
   }
 
   .christmas-sparkles {
